--- a/slackzz/package.json
+++ b/slackzz/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@types/uuid": "^11.0.0",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,6 +24,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "slugify": "^1.6.6",
     "supabase": ">=1.8.1",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
