--- a/slackzz/package.json
+++ b/slackzz/package.json
@@ -20,11 +20,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "slugify": "^1.6.6",
+    "sonner": "^2.0.7",
     "supabase": ">=1.8.1",
     "tailwind-merge": "^3.3.1",
     "uploadthing": "^7.7.4",
