--- a/slackzz/package.json
+++ b/slackzz/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
+    "@tiptap/extension-placeholder": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
     "@types/uuid": "^11.0.0",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
