--- a/slackzz/package.json
+++ b/slackzz/package.json
@@ -30,6 +30,7 @@
     "@tiptap/starter-kit": "^3.11.0",
     "@types/uuid": "^11.0.0",
     "@uploadthing/react": "^7.3.3",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
