--- a/slackzz/package.json
+++ b/slackzz/package.json
@@ -41,6 +41,8 @@
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "supabase": ">=1.8.1",
     "tailwind-merge": "^3.3.1",
