--- a/slackzz/package.json
+++ b/slackzz/package.json
@@ -25,6 +25,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@tanstack/react-query": "^5.90.12",
     "@tiptap/extension-placeholder": "^3.13.0",
     "@tiptap/react": "^3.11.0",
     "@tiptap/starter-kit": "^3.11.0",
